--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.1",
     "gulp-cssnano": "^2.1.0",
+    "gulp-file-include": "^0.13.7",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-sass": "^2.0.1",
